k8s/apps/chat/envoyfilter-disable-extauthz.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: chat-disable-ext-authz
  namespace: aks-istio-ingress
spec:
  workloadSelector:
    labels:
      istio: aks-istio-ingressgateway-external
  configPatches:
    # Disable ext_authz for chat.hugecat.net
    # The chat app handles authentication at the application level
    - applyTo: VIRTUAL_HOST
      match:
        context: GATEWAY
        routeConfiguration:
          vhost:
            name: 'chat.hugecat.net:443'
      patch:
        operation: MERGE
        value:
          typed_per_filter_config:
            envoy.filters.http.ext_authz:
              '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
              disabled: true
    # Disable ext_authz for chat.cat-herding.net
    - applyTo: VIRTUAL_HOST
      match:
        context: GATEWAY
        routeConfiguration:
          vhost:
            name: 'chat.cat-herding.net:443'
      patch:
        operation: MERGE
        value:
          typed_per_filter_config:
            envoy.filters.http.ext_authz:
              '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
              disabled: true
