k8s/apps/chat/envoyfilter-websocket.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: chat-websocket-filter
  namespace: aks-istio-ingress
spec:
  workloadSelector:
    labels:
      istio: aks-istio-ingressgateway-external
  configPatches:
    # Enable WebSocket upgrade for the chat-backend route
    - applyTo: NETWORK_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
      patch:
        operation: MERGE
        value:
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            upgrade_configs:
              - upgrade_type: websocket
