k8s/apps/chat/redis-serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: redis-external
  namespace: default
spec:
  hosts:
    - redis-service.default.svc.cluster.local
  ports:
    - number: 6379
      name: redis
      protocol: TCP
  location: MESH_INTERNAL
  resolution: DNS
