k8s/apps/chat/authz-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: chat-app-authz
  namespace: default
spec:
  selector:
    matchLabels:
      app: chat-backend
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ['*']
      to:
        - operation:
            methods:
              ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS', 'HEAD', 'PATCH']
            paths: ['/*']
